@@ -1,5 +1,10 @@
 Revision history for Perl extension IPC::System::Simple.
 
+        * TEST: Tests to ensure that passing undefined values to
+          systemx() do not produce malformed errors, but instead
+          well-formed errors.  Many thanks to Nadim Khemir for
+          spottin this.  RT #41149.  
+
 0.16  Sun Sep 14 11:29:17 AUSEST 2008
         * DOCUMENTATION: Updated documentation on $EXITVAL to provide
           extra clarification.  Many thanks again to Elliot Shank
